--- a/SEMANA_04/02_AUT_EST_ENTREGA/frontend/atualizar.html
+++ b/SEMANA_04/02_AUT_EST_ENTREGA/frontend/atualizar.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width" />
     <title>CRUD</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <h1>Atualização de Usuário</h1>
 
