--- a/SEMANA_04/02_AUT_EST_ENTREGA/frontend/index.html
+++ b/SEMANA_04/02_AUT_EST_ENTREGA/frontend/index.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width" />
     <title>CRUD</title>
-  </head>
-  <h1>Listagem de Usuários</h1>
-  <p><a href="/inserir.html">INSERIR NOVO CURRÍCULO</a></p>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Listagem de Usuários</h1>
+    <p><a href="/inserir.html">INSERIR NOVO CURRÍCULO</a></p>
 
-  <script>
-    const url = '/usuarios';
-  
-    fetch(url)
-      .then((response) => {
-        return response.json();
-      })
-      .then((data) => {
-        let usuarios = data;
-        let saida = '';
-        usuarios.map(function(usuario) {
-          saida += '<strong>Nome: </strong>'+ `${usuario.nome}` +'<strong> Descrição:  </strong>'+ `${usuario.descricao_sobre_mim}` +'<strong> Cargo desejado:  </strong>'+ `${usuario.cargo_desejado}` + '<strong> Email: </strong>' + `${usuario.email}`  + '<strong> - Número: </strong>' +  `${usuario.numero}`;
-          saida += ' - <a href="/atualizar.html?id=' + `${usuario.id}` + '">EDITAR</a>';
-          saida += ' | <a href="/deletarCurriculo?id='+`${usuario.id}`+'">REMOVER</a></br>';
-        });
-        document.getElementById('resultado').innerHTML = saida;
-      })
-      .catch(function(error) {
-        console.log(error);
-      });
-      
-
-  </script>
-
-  <body>
     <div id="resultado"></div>
-  </body>
+
+    <script>
+        const url = '/usuarios';
+
+        fetch(url)
+            .then((response) => {
+                return response.json();
+            })
+            .then((data) => {
+                let usuarios = data;
+                let saida = '';
+                usuarios.map(function (usuario) {
+                    saida += '<div class="saida"><a>Nome:</a>' + `${usuario.nome}` + '</div>';
+                    saida += '<div class="saida"><a>Descrição:</a>' + `${usuario.descricao_sobre_mim}` + '</div>';
+                    saida += '<div class="saida"><a>Cargo desejado:</a>' + `${usuario.cargo_desejado}` + '</div>';
+                    saida += '<div class="saida"><a>Email:</a>' + `${usuario.email}` + '</div>';
+                    saida += '<div class="saida"><a>Número:</a>' + `${usuario.numero}</div>`;
+                    saida += '<a class="btn" href="/atualizar.html?id=' + `${usuario.id}` + '">EDITAR</a>';
+                    saida += ' | <a class="btn" href="/deletarCurriculo?id=' + `${usuario.id}` + '">REMOVER</a></br>';
+                });
+                document.getElementById('resultado').innerHTML = saida;
+            })
+            .catch(function (error) {
+                console.log(error);
+            });
+    </script>
+</body>
 </html>
