--- a/SEMANA_05/02_AUT_EST_ENTREGA/frontend/index.html
+++ b/SEMANA_05/02_AUT_EST_ENTREGA/frontend/index.html
@@ -1,39 +1,55 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="viewport" content="width=device-width" />
-    <title>CRUD</title>
-  </head>
-  <h1>Listagem de Usuários</h1>
-  <p><a href="/inserir.html">INSERIR NOVO CURRÍCULO</a></p>
-
-  <script>
-    const url = '/usuarios';
-  
-    fetch(url)
-      .then((response) => {
-        return response.json();
-      })
-      .then((data) => {
-        let usuarios = data;
-        let saida = '';
-        usuarios.map(function(usuario) {
-          saida += '<strong>Nome: </strong>'+ `${usuario.nome}` +'<strong> Descrição:  </strong>'+ `${usuario.descricao_sobre_mim}` +'<strong> Cargo desejado:  </strong>'+ `${usuario.cargo_desejado}` + '<strong> Email: </strong>' + `${usuario.email}`  + '<strong> - Número: </strong>' +  `${usuario.numero}`;
-          saida += ' - <a href="/atualizar.html?id=' + `${usuario.id}` + '">EDITAR</a>';
-          saida += ' | <a href="/deletarCurriculo?id='+`${usuario.id}`+'">REMOVER</a></br>';
-        });
-        document.getElementById('resultado').innerHTML = saida;
-      })
-      .catch(function(error) {
-        console.log(error);
-      });
-      
-
-  </script>
-
-  <body>
-    <div id="resultado"></div>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portifólio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css"> 
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div id="navegador" class="container-fluid">
+        <a id="welcome" class="navbar-brand">Bem-vindo</a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a id="casa" class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a id="mim" class="nav-link active" aria-current="page" href="#Eu">Sobre mim</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a id="proj" class="nav-link active" aria-current="page" href="#Projetos">Projetos</a>
+            </li>
+            <li class="nav-item">
+              <a id="cont" class="nav-link active" aria-current="page" href="#Contato">Contato</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+      <img id="rafa" src="Rafaella.jpg" class="img-fluid" alt="...">
+      <h2 id="apresentacao">Olá, eu sou</h2><br>
+      <br><h1 id="nome">Rafaella Bianca Cavalcante</h1><br>
+      <h2><i>Desenvolvedora Full-Stack com ênfase em Front-End.</i></h2><br>
+    </div>
+    <div>
+      <p id="Eu"><i><strong>Criativa.</strong></i> Se tivesse que me descrever em uma palavra, seria essa. Sou apaixonada por <i><strong>tecnologia</strong></i> e por buscar <i><strong>soluções inovadoras</strong></i> para o que quer que eu esteja lidando. Sou estudante de Ciência da Computação no Inteli - Instituto de Tecnologia e Liderança - e tenho ambição de me tornar Full-Stack com enfoque em Front-End.</p>
+      <h1>Sobre mim</h1>
+      <p id="Projetos" class="sobre">Como estudante de Ciência da Computação, busco constantemente oportunidades para aprimorar minhas habilidades e conhecimentos profissionais. Tenho interesse em desenvolvimento web e Front-End, mas estou aberta a novos desafios que ampliem minha experiência e conhecimento, aplicando conceitos diversos. Acredito na importância da aprendizagem contínua nesse campo em constante evolução e estou entusiasmada em contribuir com minhas habilidades, bem como aprender com profissionais experientes.</p>
+      <h1>Projetos</h1>
+      <p class="sobre">Desde que entrei na área de tecnologia, recentemente, tive oportunidade de desenvolver diversos projetos inovadores e desafiadores, os quais me levaram a habituar-me com diferentes práticas do mercado, como metodologia ágil e métodos scrum.</p>
+      <h2 class="info"> <a href="https://github.com/2023M1T9-Inteli/grupo3/tree/main/src/Cowo 18">COWO — <i>Serious Game</i></a></h2>
+      <p class="sobre"> <strong>Janeiro de 2023 - Abril de 2023 (4 meses)</strong><br> O CoWo é um Serious Game em GDscript (linguagem semelhante ao Python) criado para modernizar o treinamento de comunicação da Cia de Talentos. O jogo possui enredo, personagens, diálogos e tarefas que ajudam os jogadores a melhorarem suas habilidades de comunicação de forma interativa. Consideramos os interesses e desafios do público-alvo no ambiente corporativo</p>
+      <h2 class="info"> <a href="https://github.com/2023M2T9-Inteli/Projeto1"> PANPEDIA — <i>Ferramenta de busca com metadados</i></a></h2>
+      <p class="sobre"> <strong>Abril de 2023 - Presente</strong><br> O Panpedia é uma plataforma de busca personalizada de metadados criada para o Banco Pan. O projeto é uma aplicação web e está sendo desenvolvido em JavaScript, com o front-end em HTML e CSS.</p>
+      <h2 class="info"> <a href="https://github.com/ItsVasconcellos/CryptoBet"> CRYPTOBET — <i>Plataforma de apostas com criptomoedas da Hathor</i></a></h2>
+      <p id="Contato" class="sobre"> <strong>Abril de 2023 - Presente</strong><br> O CryptoBet é uma plataforma inovadora de apostas com criptomoedas da Hathor Network. Com o objetivo de proporcionar facilidade, transparência e segurança, essa plataforma permite que os usuários realizem apostas sobre diversos tópicos, incluindo apostas personalizada. Utilizando a tecnologia blockchain da Hathor, o sistema de transação de apostas é baseado na criação de tokens, garantindo rastreabilidade e confiança nas apostas.</p>
+      <h1>Contato</h1>
+      <p class="sobre">Se interessou pelo meu trabalho? <i>Entre em contato comigo:</i> <br> <strong>Email:</strong> rafaella.cavalcante.ismart@gmail.com <br> <strong>Linkedin:</strong> <a href="https://www.linkedin.com/in/rafaella-bianca-cavalcante/"> Rafaella Bianca Cavalcante</a><br><strong>GITHUB:</strong> <a href="https://github.com/RafaellaCavalcante">RafaellaCavalcante</a></p>
+    </div>
+</body>
 </html>
